# FastAPI_microservices

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml
api_gateway_service/: pyproject.toml
api_gateway_service/app/: main.py
categories_service/: Dockerfile  pyproject.toml
categories_service/app/: main.py
categories_service/app/api/routers/: categories.py
categories_service/app/core/: database.py  dependencies.py  rabbitmq_worker.py
categories_service/app/models/: category.py
categories_service/app/repositories/: categories.py
categories_service/app/schemas/: category.py
categories_service/app/services/: categories.py
posts_service/: pyproject.toml
posts_service/app/: main.py
posts_service/app/api/routers/: posts.py
posts_service/app/core/: database.py  dependencies.py  rabbitmq.py
posts_service/app/models/: post.py
posts_service/app/repositories/: posts.py
posts_service/app/schemas/: post.py
posts_service/app/services/: posts.py
