[project]
name = "fastapi-categories-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.22.1",
    "fastapi==0.135.1",
    "greenlet==3.3.2",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.48",
    "uvicorn==0.42.0",
]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "ruff==0.15.7",
    "bandit==1.8.3"
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["venv", ".venv", "alembic", "docker", ".git", "__pycache__", "app/migrations/*", ".idea"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ASYNC",# asyncio
    "RUF",  # ruff-specific
]
ignore = ["E203", "E266", "E501", "B008", "ASYNC110", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "alembic/",
    "app/migrations/",
    ".idea"
]
